xedoc-rs/tui-composer/src/bottom_pane/snapshots/xedoc_tui_composer__bottom_pane__chat_composer__tests__footer_mode_history_search.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│❯ cargo test                                                                                      │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"  reverse-i-search: c  enter accept · esc cancel                                                    "
